fixes some z-index problems

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -186,10 +186,13 @@ img, video, .video-container{
 
 .page-head{
   background-color: #fff;
-  @include background-image(url("../img/top-bg-bottom.png"), url('../img/top-bg-middle.png'), url('../img/top-bg-top.png'), url('../img/header-bg.jpg'));
+  @include background-image(url("../img/top-bg-bottom.png"),
+                            url('../img/top-bg-middle.png'),
+                            url('../img/top-bg-top.png'),
+                            url('../img/header-bg.jpg'));
   background-size: contain, contain, contain, cover;
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: top center, top center, top center, 70% center;
   position: relative;
   height: 100%;
   width: 100%;
@@ -209,14 +212,20 @@ img, video, .video-container{
   }
 
   .this-is-me{
-    margin-top: 50vh;
+    position: absolute;
+    width: 20em;
+    left: 5%;
+    bottom: 10%;
     background-color: #fff;
     padding: 1rem;
     color: $light-black;
+    @include media($mobile){
+      width: 100%;
+      left: 0;
+    }
   }
 
     .name{
-    //@TODO - fix this - find better solution
     @include type(4);
     width:100%;
     line-height: .8em;
@@ -262,6 +271,11 @@ img, video, .video-container{
       width: 4em;
     }
   }
+}
+
+nav{
+  z-index: 999;
+  position: relative;
 }
 
 
@@ -396,6 +410,7 @@ img, video, .video-container{
 .sbdc{
   @include section-bg("../img/sbdc-bg.png",#9f4635,0);
   @include left-wrapper;
+  z-index: 999;
   .left-content-wrapper{
     padding-top: .6em;
     padding-bottom: 2rem;
@@ -422,6 +437,8 @@ img, video, .video-container{
 .wrapper{
   margin-bottom: 45em;
   box-shadow: 0 15px 32px rgba(0,0,0,.2);
+
+
 }
 
 .outro{
@@ -435,7 +452,7 @@ img, video, .video-container{
     background-color: transparentize(black,.2);
     @include position(absolute, 0px 0px 0px 0px);
     display: block;
-    z-index: -2
+    z-index: -2;
   }
   padding-top: 2em;
   height: 45em;
@@ -450,7 +467,10 @@ img, video, .video-container{
     width: 100%;
     position: absolute;
     bottom: 0;
+    z-index: 1;
     a{
+      font-family: $header-font-stack;
+      text-transform: uppercase;
       text-align: center;
       height: 4em;
       background-color: lightblue;
